# paste2ssh-linux

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  config.rs  imageutil.rs  lib.rs  login_item.rs  main.rs  paths.rs  ssh.rs  ssh_config.rs  state.rs  tray.rs  watcher.rs
ui/: app.js  index.html  style.css
