[package]
name = "paste2ssh"
version = "0.1.0"
description = "Paste2SSH — clipboard/screenshot images straight to your SSH host"
authors = ["Norbert Levente Kiss"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "paste2ssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
notify = "6"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
wait-timeout = "0.2"
anyhow = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
